--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
 
 <!-- JS -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<script src="build/1.1/js/script.js"></script>
+<script src="script.js"></script>
 
 </body>
 </html>
