--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
 
 
 <!-- JS -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script src="jquery.js"></script>
 <script src="script.js"></script>
 
 </body>
