--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
         <div class="pgContato">
             <div class="contato">
                 <div class="formContato">
-                    <form id="formContato" tabindex="1" action="valjr.github.io/contact.html" method="post">
+                    <form id="formContato" tabindex="1" action="/contact.html" method="post">
                         <center>
                             <input id="nome" name="nome" required="" type="text" placeholder="Name"/>
                             <input id="email" name="email" required="" type="email" placeholder="Email"/>
