--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
         <div class="footer__studio">
             <div data-footer-item>
 				<span class="footer__studio__text">Development by 
-				<a class="footer__studio__link" href="#" target="_blank">Richard Henrique</a>
+				<a class="footer__studio__link" href="https://www.linkedin.com/in/richard-henrique-451a8979" target="_blank">Richard Henrique</a>
 				</span>
             </div>
         </div>
